# hwgraph

./: .travis.yml  CMakeLists.txt  README.md
ci/: build.sh  env.sh  install_deps.sh  test.sh
cmake/: FindHwloc.cmake
include/hwgraph/: config.hpp  dot_label.hpp  edge_data.hpp  graph.hpp  hwgraph.hpp  hwloc.hpp  mat2d.hpp  narrow.hpp  nvml.hpp  pci_address.hpp  vertex_data.hpp
src/: CMakeLists.txt  print_system.cpp
test/: CMakeLists.txt  test_graph.cpp  test_hwgraph.cpp  test_main.cpp
